--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,10 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
+    <title>dota2classic</title>
+
 </head>
 <body>
-
-<div id="root"></div>
+    <div id="root"></div>
 </body>
 </html>
